# LLM-Benchmarking

./: .dockerignore  .env.example  .gitignore  BENCHMARK_SETUP_SUMMARY.md  DOCKER.md  Dockerfile.api  EMAIL_BENCHMARK_README.md  LLM_Benchmark_Presentation.md  MCP_BENCHMARK_FIXES.md  MCP_BENCHMARK_README.md  RAG_BENCHMARK.md  README.md  SETUP.md  TESTING.md  demo_email_benchmark.py  demo_email_benchmark_remote.py  demo_mcp_benchmark.py  docker-compose.yml  email_benchmark_runner.py  email_benchmark_runner_remote.py  llm_benchmark.ipynb  mcp_benchmark_runner.py  mcp_test_dataset.json  pyproject.toml  pytest.ini  rag_email_dataset copy.json  requirements-dev.txt  requirements.txt  run_api.py  run_benchmark.py  run_rag_benchmark.py  run_tests.py  run_weather_mcp_benchmark.py  sample_questions.csv  sample_questions.json  test_dashboard_updated.html  test_mcp_fix.py  weather_mcp_results_slide.md  weather_mcp_test_dataset.json
.doc/samples/: sample_questions.txt  sample_questions.yaml
.doc/test_data/: email_response_dataset.json  rag_email_dataset.json
.github/workflows/: tests.yml
api/: main.py
benchmark/: __init__.py  email_benchmark_runner.py  rag_benchmark_runner.py  runner.py
core/: run_benchmark.py
dashboard/: __init__.py  data_processor.py  html_generator.py
database/: __init__.py  connection.py  dataset_repository.py  metric_repository.py  models.py  repository.py
dataset/: __init__.py  dataset.py  email_loader.py  loaders.py  question.py
demo_results/: demo_dashboard_20250810_165423.html  demo_remote_dashboard_20250810_190526.html  demo_remote_dashboard_20250810_210712.html  demo_remote_results_20250810_190526.json  demo_remote_results_20250810_210712.json  demo_results_20250810_165423.json
email_benchmark_results/: email_benchmark_results_remote_20250810_184147.json
frontend/: UPGRADE_NODE.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: BenchmarkDetailDialog.vue  (+8 more)
mcp_demo_results/: mcp_demo_dashboard_20250810_210025.html  mcp_demo_results_20250810_210025.json
metrics/: __init__.py  bias.py  database_loader.py  email_categorization_metric.py  email_clarity.py  email_empathy.py  email_professionalism.py  email_responsiveness.py  evaluator.py  fairness.py  generic_metrics.py  hallucinations.py  metric_base.py  metric_factory.py  rag_metrics.py  relevance.py  responses.py  robustness.py  toxicity.py
metrics/email/: __init__.py  email_clarity.py  email_empathy.py  email_professionalism.py  email_responsiveness.py
metrics/general/: __init__.py  bias.py  fairness.py  hallucinations.py  relevance.py  robustness.py  toxicity.py
metrics/mcp/: __init__.py  contextual_awareness.py  information_retrieval_quality.py  tool_selection_efficiency.py  tool_usage_accuracy.py
models/: __init__.py  base_model.py  model_config.py  ollama_mcp_model.py  ollama_model.py  openai_model.py  responses.py
prompts/: email_response_prompt.txt  evaluation_templates.json
scripts/: check_database.py  generate_rag_dataset_from_emails.py  import_benchmark_results.py  init_database.py  init_rag_metrics.py  inspect_generate.py
tests/: __init__.py  conftest.py
tests/test_metrics/: __init__.py  test_factory.py  test_responses.py
tests/test_models/: __init__.py  test_model_config.py  test_ollama_model.py  test_openai_model.py
visualizations/: evaluation_visualizer.py  llm_benchmark.ipynb
vizualizations/: evaluation_vizualizer.py
(+2 files in other folders)
